methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^MethodsArgs:2: error: not found: value move
move(getY(),getDirection()==Direction.NORTH)
^