methods.args.MethodsArgs.scala.code
move(getY(),getDirection()==Direction.NORTH)
  if (getDirection()==Direction.NORTH){
    for (i<- 0 to getY()){
      avance()
    }
  }
  else{
    for (i<-0 to getY()){
      recule()
    }
  }